--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/pwa-elements": "^3.3.0",
     "firebase": "^10.11.1",
     "ionicons": "^7.0.0",
+    "nodemailer": "^6.9.16",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
